# olio-ohjelmointi

./: README.md
GuiData/: GuiData.pro  form2.cpp  form2.h  form2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
GuiExample/: form2.cpp  form2.h  form2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kotiteht6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Kotitehtava2/: game.cpp  game.h  main.cpp
Teht1_osa2/: CMakeLists.txt  main.cpp
graph/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
graph2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
kotiteht-5/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
kotiteht-5-extra/: devicebaseclass.cpp  devicebaseclass.h  devicedisplay.cpp  devicedisplay.h  devicemouse.cpp  devicemouse.h  devicetouchpad.cpp  devicetouchpad.h  main.cpp  mydeviceui.cpp  mydeviceui.h
kotiteht3/: chef.cpp  chef.h
kotiteht3-osa2/: chef.cpp  chef.h  main.cpp
kotiteht3-osa4/: chef.cpp  chef.h  main.cpp
kotiteht4/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  kotiteht4.pro  main.cpp
library_app/: library_app.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h
network_test/: mainwindow.cpp  mainwindow.h  mainwindow.ui
shakkikello/: mainwindow.cpp  mainwindow.h  mainwindow.ui
teht1/: CMakeLists.txt  main.cpp
teht1_osa3/: CMakeLists.txt  main.cpp
